--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,14 +2,19 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>sample</title>
+    <title>Django Girls Blog</title>
 </head>
 <body>
 <div>
             <h1><a href="/">Django Girls Blog</a></h1>
 </div>
 {% for post in posts %}
-    {{ posts }}
+    <div>
+    <p>published: {{ post.published_date }}</p>
+    <h2><a href="">{{ post.title }}</a></h2>
+    <p>{{ post.text | linebreaksbr }}</p>
 {% endfor %}
+
+
 </body>
 </html>
